manifests-canary/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
  labels:
    app: hello
spec:
  replicas: 10
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
      labels:
        app: hello
    spec:
      containers:
        - name: test
          image: registryforadopoc.azurecr.io/hello-gin:52
          ports:
            - containerPort: 8080
