manifests-canary/service-blue.yml
apiVersion: v1
kind: Service
metadata:
  name: service-blue
spec:
  selector:
    app: hello-blue
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
