manifests-canary/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  selector:
    app: hello
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
